  ::setHookContainer() were hard deprecated. Use ::init() to inject
  dependencies or override ::postInitSetup() to do any custom
  post-initialization configuration.
* RecentChange::getPerformer(), hard-deprecated since 1.37,
  use getPerformerIdentity() instead.
* ContentHandler::cleanupHandlersCache(), deprecated since 1.35, now emits
  deprecation warnings.
* File::getUser method was hard deprecated, along with overrides in LocalFile
  and ForeignApiFile in favor of ::getUploader.
* SpecialBlock::checkUnblockSelf(), deprecated in 1.36, now emits deprecation
  warnings.
* (T284179) The mediawiki.viewport ResourceLoader module is deprecated. You can
  now just use MutationObserver or InterSectionObserver directly, which are
  widely available in all supported JavaScript browsers.
* The following constructor options of DatabaseBlock class,
  hard deprecated since 1.37:
  - 'byText' property with blocker's name,
    use 'by' property with UserIdentity value instead.
  - 'by' property with blocker's ID,
    use 'by' property with UserIdentity value instead.
* The BeforeResetNotificationTimestamp hook was deprecated.
* ArchivedFile::getUser, ::getRawUser, ::getRawUserText were deprecated in
  favor of ::getUploader. ::getRawDescription was deprecated in favor of
  ::getDescription with RAW audience parameter.
* When calling LocalFile::newFromRow() or LocalFile::loadFromRow(), passing
  extra fields not requested by ::getQueryInfo() is hard deprecated. This is
  to warn callers that deprefixing and automatic assignment of such fields will
  not be done in a future version.
* JobSpecification::getTitle was deprecated without providing a replacement.
  It wasn't used and job given the purpose of JobSpecification class it's
  not needed.
* The protected method File::getImageSize() is deprecated.
* BacklinkCache::get() was deprecated, use
  BacklinkCacheFactory::getBacklinkCache() instead.
* Title::getBacklinkCache() was hard deprecated. Use ::getBacklinkCache()