@@ -22,6 +22,7 @@
  */
 
 use MediaWiki\MediaWikiServices;
+use MediaWiki\Page\PageIdentity;
 use Wikimedia\Rdbms\ILoadBalancer;
 
 /**
@@ -35,9 +36,9 @@ class Category {
 	private $mID = null;
 	/**
 	 * Category page title
-	 * @var Title
+	 * @var PageIdentity
 	 */
-	private $mTitle = null;
+	private $mPage = null;
 	/** Counts of membership (cat_pages, cat_subcats, cat_files) */
 	private $mPages = null, $mSubcats = null, $mFiles = null;
 
@@ -86,17 +87,17 @@ class Category {
 
 		if ( !$row ) {
 			# Okay, there were no contents.  Nothing to initialize.
-			if ( $this->mTitle ) {
-				# If there is a title object but no record in the category table,
+			if ( $this->mPage ) {
+				# If there is a page object but no record in the category table,
 				# treat this as an empty category.
 				$this->mID = false;
-				$this->mName = $this->mTitle->getDBkey();
+				$this->mName = $this->mPage->getDBkey();
 				$this->mPages = 0;
 				$this->mSubcats = 0;
 				$this->mFiles = 0;
 
-				# If the title exists, call refreshCounts to add a row for it.
-				if ( $mode === self::LAZY_INIT_ROW && $this->mTitle->exists() ) {
+				# If the page exists, call refreshCounts to add a row for it.
+				if ( $mode === self::LAZY_INIT_ROW && $this->mPage->exists() ) {
 					DeferredUpdates::addCallableUpdate( [ $this, 'refreshCounts' ] );
 				}
 
@@ -143,7 +144,7 @@ class Category {
 			return false;
 		}
 
-		$cat->mTitle = $title;
+		$cat->mPage = $title;
 		$cat->mName = $title->getDBkey();
 
 		return $cat;
@@ -152,14 +153,14 @@ class Category {
 	/**
 	 * Factory function.
 	 *
-	 * @param Title $title Title for the category page
-	 * @return Category|bool On a totally invalid name
+	 * @param PageIdentity $page Category page. Warning, no validation is performed!
+	 * @return Category
 	 */
-	public static function newFromTitle( $title ) {
+	public static function newFromTitle( PageIdentity $page ): self {
 		$cat = new self();
 
-		$cat->mTitle = $title;
-		$cat->mName = $title->getDBkey();
+		$cat->mPage = $page;
+		$cat->mName = $page->getDBkey();
 
 		return $cat;
 	}
@@ -167,7 +168,7 @@ class Category {
 	/**
 	 * Factory function.
 	 *
-	 * @param int $id A category id
+	 * @param int $id A category id. Warning, no validation is performed!
 	 * @return Category
 	 */
 	public static function newFromID( $id ) {
@@ -179,18 +180,16 @@ class Category {
 	/**
 	 * Factory function, for constructing a Category object from a result set
 	 *
-	 * @param stdClass $row Result set row, must contain the cat_xxx fields. If the
-	 *   fields are null, the resulting Category object will represent an empty
-	 *   category if a title object was given. If the fields are null and no
-	 *   title was given, this method fails and returns false.
-	 * @param Title|null $title Optional title object for the category represented by
-	 *   the given row. May be provided if it is already known, to avoid having
-	 *   to re-create a title object later.
+	 * @param stdClass $row Result set row, must contain the cat_xxx fields. If the fields are
+	 *   null, the resulting Category object will represent an empty category if a page object was
+	 *   given. If the fields are null and no PageIdentity was given, this method fails and returns
+	 *   false.
+	 * @param PageIdentity|null $page This must be provided if there is no cat_title field in $row.
 	 * @return Category|false
 	 */
-	public static function newFromRow( $row, $title = null ) {
+	public static function newFromRow( stdClass $row, ?PageIdentity $page = null ) {
 		$cat = new self();
-		$cat->mTitle = $title;
+		$cat->mPage = $page;
 
 		# NOTE: the row often results from a LEFT JOIN on categorylinks. This may result in
 		#       all the cat_xxx fields being null, if the category page exists, but nothing
@@ -198,13 +197,13 @@ class Category {
 		#       category, if possible.
 
 		if ( $row->cat_title === null ) {
-			if ( $title === null ) {
+			if ( $page === null ) {
 				# the name is probably somewhere in the row, for example as page_title,
 				# but we can't know that here...
 				return false;
 			} else {
-				# if we have a title object, fetch the category name from there
-				$cat->mName = $title->getDBkey();
+				# if we have a PageIdentity object, fetch the category name from there
+				$cat->mName = $page->getDBkey();
 			}
 
 			$cat->mID = false;
@@ -258,19 +257,29 @@ class Category {
 	}
 
 	/**
-	 * @return Title|bool Title for this category, or false on failure.
+	 * @since 1.37
+	 * @return ?PageIdentity the page associated with this category, or null on failure. NOTE: This
+	 *   returns null on failure, unlike getTitle() which returns false.
 	 */
-	public function getTitle() {
-		if ( $this->mTitle ) {
-			return $this->mTitle;
+	public function getPage(): ?PageIdentity {
+		if ( $this->mPage ) {
+			return $this->mPage;
 		}
 
 		if ( !$this->initialize( self::LAZY_INIT_ROW ) ) {
-			return false;
+			return null;
 		}
 
-		$this->mTitle = Title::makeTitleSafe( NS_CATEGORY, $this->mName );
-		return $this->mTitle;
+		$this->mPage = Title::makeTitleSafe( NS_CATEGORY, $this->mName );
+		return $this->mPage;
+	}
+
+	/**
+	 * @deprecated since 1.37, use getPage() instead.
+	 * @return Title|bool Title for this category, or false on failure.
+	 */
+	public function getTitle() {
+		return Title::castFromPageIdentity( $this->getPage() ) ?? false;
 	}
 
 	/**
@@ -374,7 +383,7 @@ class Category {
 			__METHOD__
 		);
 
-		$shouldExist = $result->pages > 0 || $this->getTitle()->exists();
+		$shouldExist = $result->pages > 0 || $this->getPage()->exists();
 
 		if ( $this->mID ) {
 			if ( $shouldExist ) {
