@@ -21,10 +21,14 @@
  */
 
 use MediaWiki\HookContainer\ProtectedHookAccessorTrait;
+use MediaWiki\Linker\LinkTarget;
 use MediaWiki\MediaWikiServices;
+use MediaWiki\Page\PageIdentity;
+use MediaWiki\Page\PageReference;
 
 class CategoryViewer extends ContextSource {
 	use ProtectedHookAccessorTrait;
+	use DeprecationHelper;
 
 	/** @var int */
 	public $limit;
@@ -65,8 +69,8 @@ class CategoryViewer extends ContextSource {
 	/** @var array */
 	public $flip;
 
-	/** @var Title */
-	public $title;
+	/** @var PageIdentity */
+	protected $page;
 
 	/** @var Collation */
 	public $collation;
@@ -85,17 +89,29 @@ class CategoryViewer extends ContextSource {
 
 	/**
 	 * @since 1.19 $context is a second, required parameter
-	 * @param Title $title
+	 * @param PageIdentity $page
 	 * @param IContextSource $context
 	 * @param array $from An array with keys page, subcat,
 	 *        and file for offset of results of each section (since 1.17)
 	 * @param array $until An array with 3 keys for until of each section (since 1.17)
 	 * @param array $query
 	 */
-	public function __construct( $title, IContextSource $context, $from = [],
-		$until = [], $query = []
+	public function __construct( PageIdentity $page, IContextSource $context, array $from = [],
+		array $until = [], array $query = []
 	) {
-		$this->title = $title;
+		$this->page = $page;
+
+		$this->deprecatePublicPropertyFallback(
+			'title',
+			'1.37',
+			function (): Title {
+				return Title::castFromPageIdentity( $this->page );
+			},
+			function ( PageIdentity $page ) {
+				$this->page = $page;
+			}
+		);
+
 		$this->setContext( $context );
 		$this->getOutput()->addModuleStyles( [
 			'mediawiki.action.view.categoryPage.styles'
@@ -103,7 +119,7 @@ class CategoryViewer extends ContextSource {
 		$this->from = $from;
 		$this->until = $until;
 		$this->limit = $context->getConfig()->get( 'CategoryPagingLimit' );
-		$this->cat = Category::newFromTitle( $title );
+		$this->cat = Category::newFromTitle( $page );
 		$this->query = $query;
 		$this->collation = MediaWikiServices::getInstance()->getCollationFactory()->getCategoryCollation();
 		$this->languageConverter = MediaWikiServices::getInstance()
@@ -188,22 +204,23 @@ class CategoryViewer extends ContextSource {
 	 */
 	public function addSubcategoryObject( Category $cat, $sortkey, $pageLength ) {
 		// Subcategory; strip the 'Category' namespace from the link text.
-		$title = $cat->getTitle();
+		$pageRecord = MediaWikiServices::getInstance()->getPageStore()
+			->getPageByReference( $cat->getPage() );
 
 		$this->children[] = $this->generateLink(
 			'subcat',
-			$title,
-			$title->isRedirect(),
-			htmlspecialchars( $title->getText() )
+			$pageRecord,
+			$pageRecord->isRedirect(),
+			htmlspecialchars( str_replace( '_', ' ', $pageRecord->getDBkey() ) )
 		);
 
 		$this->children_start_char[] =
-			$this->getSubcategorySortChar( $cat->getTitle(), $sortkey );
+			$this->getSubcategorySortChar( $cat->getPage(), $sortkey );
 	}
 
 	/**
 	 * @param string $type
-	 * @param Title $title
+	 * @param PageReference $page
 	 * @param bool $isRedirect
 	 * @param string|null $html
 	 * @return string
@@ -212,15 +229,19 @@ class CategoryViewer extends ContextSource {
 	 * @param-taint $html tainted
 	 * @return-taint escaped
 	 */
-	private function generateLink( $type, Title $title, $isRedirect, $html = null ) {
+	private function generateLink(
+		string $type, PageReference $page, bool $isRedirect, ?string $html = null
+	): string {
 		$link = null;
-		$this->getHookRunner()->onCategoryViewer__generateLink( $type, $title, $html, $link );
+		$legacyTitle = MediaWikiServices::getInstance()->getTitleFactory()
+			->castFromPageReference( $page );
+		$this->getHookRunner()->onCategoryViewer__generateLink( $type, $legacyTitle, $html, $link );
 		if ( $link === null ) {
 			$linkRenderer = MediaWikiServices::getInstance()->getLinkRenderer();
 			if ( $html !== null ) {
 				$html = new HtmlArmor( $html );
 			}
-			$link = $linkRenderer->makeLink( $title, $html );
+			$link = $linkRenderer->makeLink( $page, $html );
 		}
 		if ( $isRedirect ) {
 			$link = Html::rawElement(
@@ -240,13 +261,15 @@ class CategoryViewer extends ContextSource {
 	 * Workaround: If sortkey == "Category:".$title, than use $title for sorting,
 	 * else use sortkey...
 	 *
-	 * @param Title $title
+	 * @param PageIdentity $page
 	 * @param string $sortkey The human-readable sortkey (before transforming to icu or whatever).
 	 * @return string
 	 */
-	public function getSubcategorySortChar( $title, $sortkey ) {
-		if ( $title->getPrefixedText() == $sortkey ) {
-			$word = $title->getDBkey();
+	public function getSubcategorySortChar( PageIdentity $page, string $sortkey ): string {
+		$titleText = MediaWikiServices::getInstance()->getTitleFormatter()
+			->getPrefixedText( $page );
+		if ( $titleText === $sortkey ) {
+			$word = $page->getDBkey();
 		} else {
 			$word = $sortkey;
 		}
@@ -258,12 +281,16 @@ class CategoryViewer extends ContextSource {
 
 	/**
 	 * Add a page in the image namespace
-	 * @param Title $title
+	 * @param PageReference $page
 	 * @param string $sortkey
 	 * @param int $pageLength
 	 * @param bool $isRedirect
 	 */
-	public function addImage( Title $title, $sortkey, $pageLength, $isRedirect = false ) {
+	public function addImage(
+		PageReference $page, string $sortkey, int $pageLength, bool $isRedirect = false
+	): void {
+		$title = MediaWikiServices::getInstance()->getTitleFactory()
+			->castFromPageReference( $page );
 		if ( $this->showGallery ) {
 			$flip = $this->flip['file'];
 			if ( $flip ) {
@@ -272,7 +299,7 @@ class CategoryViewer extends ContextSource {
 				$this->gallery->add( $title );
 			}
 		} else {
-			$this->imgsNoGallery[] = $this->generateLink( 'image', $title, $isRedirect );
+			$this->imgsNoGallery[] = $this->generateLink( 'image', $page, $isRedirect );
 
 			$this->imgsNoGallery_start_char[] =
 				$this->languageConverter->convert( $this->collation->getFirstLetter( $sortkey ) );
@@ -281,13 +308,15 @@ class CategoryViewer extends ContextSource {
 
 	/**
 	 * Add a miscellaneous page
-	 * @param Title $title
+	 * @param PageReference $page
 	 * @param string $sortkey
 	 * @param int $pageLength
 	 * @param bool $isRedirect
 	 */
-	public function addPage( $title, $sortkey, $pageLength, $isRedirect = false ) {
-		$this->articles[] = $this->generateLink( 'page', $title, $isRedirect );
+	public function addPage(
+		PageReference $page, string $sortkey, int $pageLength, bool $isRedirect = false
+	): void {
+		$this->articles[] = $this->generateLink( 'page', $page, $isRedirect );
 
 		$this->articles_start_char[] =
 			$this->languageConverter->convert( $this->collation->getFirstLetter( $sortkey ) );
@@ -355,7 +384,7 @@ class CategoryViewer extends ContextSource {
 						'cl_collation'
 					]
 				),
-				array_merge( [ 'cl_to' => $this->title->getDBkey() ], $extraConds ),
+				array_merge( [ 'cl_to' => $this->page->getDBkey() ], $extraConds ),
 				__METHOD__,
 				[
 					'USE INDEX' => [ 'categorylinks' => 'cl_sortkey' ],
@@ -562,7 +591,9 @@ class CategoryViewer extends ContextSource {
 			$list = self::shortList( $articles, $articles_start_char );
 		}
 
-		$pageLang = $this->title->getPageLanguage();
+		$pageLang = MediaWikiServices::getInstance()->getTitleFactory()
+			->castFromPageIdentity( $this->page )
+			->getPageLanguage();
 		$attribs = [ 'lang' => $pageLang->getHtmlCode(), 'dir' => $pageLang->getDir(),
 			'class' => 'mw-content-' . $pageLang->getDir() ];
 		$list = Html::rawElement( 'div', $attribs, $list );
@@ -665,7 +696,7 @@ class CategoryViewer extends ContextSource {
 			$prevQuery["{$type}until"] = $first;
 			unset( $prevQuery["{$type}from"] );
 			$prevLink = $linkRenderer->makeKnownLink(
-				$this->addFragmentToTitle( $this->title, $type ),
+				$this->addFragmentToTitle( $this->page, $type ),
 				new HtmlArmor( $prevLink ),
 				[],
 				$prevQuery
@@ -679,7 +710,7 @@ class CategoryViewer extends ContextSource {
 			$lastQuery["{$type}from"] = $last;
 			unset( $lastQuery["{$type}until"] );
 			$nextLink = $linkRenderer->makeKnownLink(
-				$this->addFragmentToTitle( $this->title, $type ),
+				$this->addFragmentToTitle( $this->page, $type ),
 				new HtmlArmor( $nextLink ),
 				[],
 				$lastQuery
@@ -693,12 +724,12 @@ class CategoryViewer extends ContextSource {
 	 * Takes a title, and adds the fragment identifier that
 	 * corresponds to the correct segment of the category.
 	 *
-	 * @param Title $title The title (usually $this->title)
+	 * @param PageReference $page The title (usually $this->title)
 	 * @param string $section Which section
 	 * @throws MWException
-	 * @return Title
+	 * @return LinkTarget
 	 */
-	private function addFragmentToTitle( $title, $section ) {
+	private function addFragmentToTitle( PageReference $page, string $section ): LinkTarget {
 		switch ( $section ) {
 			case 'page':
 				$fragment = 'mw-pages';
@@ -714,8 +745,8 @@ class CategoryViewer extends ContextSource {
 					" Invalid section $section." );
 		}
 
-		return Title::makeTitle( $title->getNamespace(),
-			$title->getDBkey(), $fragment );
+		return new TitleValue( $page->getNamespace(),
+			$page->getDBkey(), $fragment );
 	}
 
 	/**
